# refidx2se

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
refidxdb/: __init__.py  catalog.py
src/refidxdb/: loader.py
tests/: test_catalog.py  test_loader.py
