[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refidx2se"
version = "0.1.1"
description = "Lightweight interface to the refractiveindex.info database with refellips support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Aiden Gauer", email = "aiden.gauer@stonybrook.edu" }]
keywords = ["ellipsometry", "refractive-index", "data-analysis", "thin-films"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.2",
    "requests>=2.28",
    "pyyaml>=6.0",
    "refractiveindex>=0.2",
    "refellips>=0.0.6",
    "refnx>=0.1.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.24",   # mock HTTP in tests
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/agauer/refidx2se"
"Bug Tracker" = "https://github.com/agauer/refidx2se/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["refidx2se*"]

# ── Ruff (linter + formatter) ────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B905", "E402"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["refidx2se"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=refidx2se --cov-report=term-missing"
